--- a/16-html-css/homework html-css/application-form.html
+++ b/16-html-css/homework html-css/application-form.html
@@ -32,6 +32,8 @@
             <label for="message">Message *</label>
             <textarea placeholder="Let us know your questions here..." id="message" rows=5"></textarea>
         </div>
+
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
